--- a/src/main/webapp/resources/css/jquery.autocomplete.css
+++ b/src/main/webapp/resources/css/jquery.autocomplete.css
@@ -37,7 +37,7 @@
 }
 
 .ac_loading {
-	background: white url('..\images\indicator.gif') right center no-repeat;
+	background: white url('../images/indicator.gif') right center no-repeat;
 }
 
 /*.ac_odd {
